	  creation of the regular expression objects. Now the
	  IgProfAnalyzerApplication::parseArgs creates a vector of
	  RegexpSpecs from which RegexpFilter builds the lat::Regexp
	  object. This removes the need for
	  Configuration::setRegexpFilter, Configuration::regexpFilter,
	  Configuration::m_regexpFilter, RegexpFilter::addSubstitution.
		
2009-12-17  Giulio Eulisse <giulio.eulisse@cern.ch>

	* scripts/igprof-navigator-summary: helper script to generate
	  index database with all the information required by igprof-navigator
	  to produce dynamic / more useful top page.

2009-12-01  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc: factorization of flat report
	  generation code from tree analysis.

	* bin/IgProfAnalyse.cc: when running in 
	  --dump-allocations mode use an estimator of memory
	  fragmentation rather then simply MEM_LIVE
	  as an index.
	  Such an estimator is:

	  pagesize * number of allocations / memory used

	  for every node in the tree.

	  Notice that such a number is just an estimator
	  and does not have any particular meaning when
	  it gets summed up from children to parent.

2009-11-24  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgResolveSymbols.h: fixes a 64bit problem.

2009-11-19  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc: simplifies the way useGdb 
	  configuration option is handled by removing trivial
	  getter / setter.

	* bin/IgProfAnalyse.cc: add a proper filter to dump
	  heap map information. This also adds the top ten
	  stacktraces so that we can highlight them on the 
	  map.

	* bin/IgProfAnalyse.cc: simplify the tree walking
	  / filtering class removing the unneeded templation
	  and filter type hierarchy.

	* bin/IgProfAnalyse.cc: fixes a regression when
	  --dump-allocations option is not passed in.

	* bin/IgProfAnalyse.cc: simplify a few parts that
	  were using lat::StringOps without any particular
	  reason.

2009-11-14  Giulio Eulisse <giulio.eulisse@cern.ch>
